--- a/WhatIt/res/layout/activity_perfil_producto.xml
+++ b/WhatIt/res/layout/activity_perfil_producto.xml
@@ -6,25 +6,26 @@
     android:background="@drawable/background">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="350dp"
+        android:layout_height="93dp"
+        android:layout_gravity="right"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/encabe_proyecto"
         android:gravity="right" >
-
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/sala" />
 
         <LinearLayout
             android:layout_width="250dp"
             android:layout_height="match_parent"
+            android:gravity="center"
             android:orientation="vertical" >
 
             <TextView
                 android:id="@+id/textView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textColor="#fff"
+                android:textStyle="bold"
                 android:text="¿Que desea para tu" />
 
             <AutoCompleteTextView
@@ -48,7 +49,10 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="Presupuesto" 
+	        android:textStyle="bold"
+	        android:textSize="20sp"
+	        android:textColor="#1b75bb"/>
 
         <EditText
             android:id="@+id/editText1"
@@ -60,7 +64,10 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="Materiales" 
+	        android:textStyle="bold"
+	        android:textSize="20sp"
+	        android:textColor="#1b75bb"/>
 
         <EditText
             android:id="@+id/editText2"
@@ -68,36 +75,45 @@
             android:layout_height="wrap_content"
             android:ems="10" />
 
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Colores"
+            android:textColor="#1b75bb"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/editText3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Dimensiones del Lugar"
+            android:textColor="#1b75bb"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/editText4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10" />
+        
+        <Button 
+            android:id="@+id/button1" 
+            android:layout_width="wrap_content" 
+            android:layout_height="wrap_content" 
+            android:text="Button" 
+            android:background="@drawable/enviar"/>
+
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
-
-    <EditText
-        android:id="@+id/editText3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
-
-    <EditText
-        android:id="@+id/editText4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10" />
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+    
 
 </LinearLayout>
